# KIDSVT

./: CMakeLists.txt  README.md
back/: CMakeLists.txt  Makefile
back/.nvim/: tasks.json
back/include/: conviniences.hpp  vmach.hpp  vram.hpp
back/res/: chess.kids  run.kids
back/src/: main.cpp  vmach.cpp  vram.cpp
front/: .gitignore  main.py
front/app/tabs/: config_tab.py  report_tab.py  testing_tab.py
front/app/utils/: constants.py
front/app/widgets/: ram_grid.py
include/: vmach.hpp  vram.hpp
src/: main.cpp  vmach.cpp  vram.cpp
